--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Ben Fawcett",
   "license": "ISC",
   "dependencies": {
+    "btoa": "^1.2.1",
     "inquirer": "^7.1.0",
     "jest": "^25.4.0"
   }
